--- a/resources/overview.html.twig
+++ b/resources/overview.html.twig
@@ -8,30 +8,33 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h2 class="mb-4">Student Overview</h2>
-
-    <table class="table table-bordered">
+    <h2>Student Overview</h2>
+    <table class="table table-striped mt-4">
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Name</th>
+                <th>Username</th>
                 <th>Email</th>
                 <th>Score</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
             {% for student in students %}
-                <tr>
-                    <td>{{ student.id }}</td>
-                    <td>{{ student.name }}</td>
-                    <td>{{ student.email }}</td>
-                    <td>{{ student.score }}</td>
-                </tr>
+            <tr>
+                <td>{{ student.getId() }}</td>
+                <td>{{ student.getUsername() }}</td>
+                <td>{{ student.getEmail() }}</td>
+                <td>{{ student.getScore() }}</td>
+                <td>
+                    <a href="?page=edit&id={{ student.getId() }}" class="btn btn-warning btn-sm">Edit</a>
+                    <a href="?page=delete&id={{ student.getId() }}" class="btn btn-danger btn-sm"
+                       onclick="return confirm('Are you sure you want to delete this student?');">Delete</a>
+                </td>
+            </tr>
             {% endfor %}
         </tbody>
     </table>
-
-    <p class="mt-3"><a href="?page=create">Add New Student</a>.</p>
 </div>
 </body>
 </html>
