--- a/resources/delete.html.twig
+++ b/resources/delete.html.twig
@@ -1,11 +1,11 @@
-<h2>Delete Student</h2>
+<h2>Delete Quote</h2>
 {% if error %}
     <p style="color: red;">{{ error }}</p>
 {% endif %}
 <form method="get" action="?page=delete">
-    <label for="id">Student ID to delete:</label>
+    <label for="id">Quote ID to delete:</label>
     <input type="number" id="id" name="id" required>
 
-    <button type="submit">Delete Student</button>
+    <button type="submit">Delete Quote</button>
 </form>
 <p><a href="?page=overview">Back to Overview</a></p>
